--- a/includes/sidebar.html
+++ b/includes/sidebar.html
@@ -1,30 +1,30 @@
 <div class="sidebar">
     <div class="logo_content">
         <div class="logo">
-            <img class="logo_icon" src="Images/DC_Logo.png" alt="">
+            <!-- <img class="logo_icon" src="Images/DC_Logo.png" alt=""> -->
             <div class="logo_name">Mods</div>
         </div>
         <i class='bx bx-menu' id="btn"></i>
     </div>
     <ul class="nav_list">
         <li>
-            <a href="#">
+            <a href="#home">
                 <i class='bx bxs-home' ></i>
                 <span class="links_name">Home</span>
             </a>
             <!-- <span class="tooltip">Home</span> -->
         </li>
         <li>
-            <a href="#">
+            <a href="#games">
                 <i class='bx bxs-message-dots' ></i>
-                <span class="links_name">Posts</span>
+                <span class="links_name">Games</span>
             </a>
             <!-- <span class="tooltip">Posts</span> -->
         </li>
         <li>
             <a href="#">
                 <i class='bx bxs-joystick'></i>
-                <span class="links_name">Games</span>
+                <span class="links_name">Posts</span>
             </a>
             <!-- <span class="tooltip">Games</span> -->
         </li>
