--- a/style.css
+++ b/style.css
@@ -87,22 +87,25 @@ body{
 .info{
    display: flex;
    flex-direction: column; 
+   justify-content: space-between;
 }
 
 .box3{
-    height: 5px;
-    margin-bottom: 8px;
+    height: 25px;
 }
 
 .text1-box3{
    color: white;
+   background-color: rgba(255, 255, 255, 0.25);
 }
 
 .text2-box3{
     color: white;
+    background-color: rgba(255, 255, 255, 0.25);
     text-align: right;
 }
 
 .text3-box3{
     color: white;
+    background-color: rgba(255, 255, 255, 0.25);
 }
