--- a/style.css
+++ b/style.css
@@ -119,3 +119,10 @@ body{
     color: white;
     background-color: rgba(255, 255, 255, 0.25);
 }
+
+/* Socials */
+.socials{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
