--- a/style.css
+++ b/style.css
@@ -260,23 +260,33 @@ body{
 }
 
 .box3{
-    height: 50px;
+    height: 100px;
+    background-color: rgba(255, 255, 255, 0.25);
+    margin-bottom: 4px;
+    border: 2px solid pink;
+    border-radius: 10px;
 }
 
 .text1-box3{
+    margin: 5px 0px 0px 5px;
+    width: 50%;
     color: white;
-    background-color: rgba(255, 255, 255, 0.25);
 }
-
+/*
+#aboutme{
+    background-image: url("Images/about-me.jpg");
+    background-size: cover;
+}
+*/
 .text2-box3{
+    margin: 5px 5px 0px 0px;
     color: white;
-    background-color: rgba(255, 255, 255, 0.25);
     text-align: right;
 }
 
 .text3-box3{
+    margin: 5px 0px 0px 5px;
     color: white;
-    background-color: rgba(255, 255, 255, 0.25);
 }
 
 /* Socials */
