--- a/style.css
+++ b/style.css
@@ -1,276 +1,311 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
-body{
-    font-family: 'Roboto', sans-serif;
-    background-image: linear-gradient(darkred, black);
+* {
+  font-family: "Roboto", sans-serif;
 }
 
+/* Navbar */
 .box-shadow-1 {
-    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
+    rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
 
-.text-neon-effect {
-    text-shadow: 10px 10px 25px rgb(224, 20, 20),
-    -10px 10px 25px rgb(224, 20, 20),
-    -10px -10px 25px rgb(224, 20, 20),
-    10px -10px 25px rgb(224, 20, 20);
+.navbar {
+  position: sticky;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  border-radius: 15px;
 }
 
-.text-neon-effect-2 {
-    text-shadow: 10px 10px 25px rgb(40,4,4),
-    -10px 10px 25px rgb(40,4,4),
-    -10px -10px 25px rgb(40,4,4),
-    10px -10px 25px rgb(40,4,4);
-}
-
-.navbar{
-    position: sticky;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: auto;
-    background-color: rgba(0, 0, 0, 0.25);
-    border-radius: 10px;
-    transition: 0.3s;
-}
-
-.navbar:hover {
-    padding: 5px;
-}
-
-.nav-logo{
-    width: 50px;
-    margin: 5px;
-    cursor: pointer;
-    opacity: 0.6;
-    transition: 0.3s;
+.nav-logo {
+  width: 50px;
+  margin: 5px;
+  cursor: pointer;
+  opacity: 0.6;
+  transition: 0.3s;
+  filter: invert(100%);
 }
 
 .nav-logo:hover {
-    opacity: 1;
-    padding: 10px;
+  opacity: 1;
+  width: 65px;
+  /* padding: 10px; */
 }
 
 /* nav-itens */
-.nav-itens{
-    color: white;
-    text-decoration: none;
-    margin: 0px 25px 0px 25px;
-    opacity: 0.6;
-    transition: 0.3s;
+.nav-itens {
+  color: black;
+  text-decoration: none;
+  margin: 0px 25px 0px 25px;
+  opacity: 0.6;
+  transition: 0.3s;
 }
 
-.nav-itens:hover{
-    opacity: 1;
-    padding: 10px;
-    text-decoration: underline;
+.nav-itens:hover {
+  opacity: 1;
+  padding: 10px;
+  text-decoration: underline;
 }
 
 .toggle-button {
-    position: absolute;
-    top: .75rem;
-    right: 1rem;
-    display: none;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 30px;
-    height: 21px;
+  position: absolute;
+  top: 0.75rem;
+  right: 1rem;
+  display: none;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 30px;
+  height: 21px;
 }
 
 .toggle-button .bar {
-    height: 3px;
-    width: 100%;
-    background-color: white;
-    border-radius: 10px;
+  height: 3px;
+  width: 100%;
+  background-color: white;
+  border-radius: 10px;
 }
 
 .title-section {
-    display: flex;
-    align-content: center;
-    text-align: center;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-content: center;
+  text-align: center;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
 
 /* SCROLL BAR */
-
 ::-webkit-scrollbar {
-    width: 10px;
-  }
-  
-  /* Track */
-  ::-webkit-scrollbar-track {
-    background: #f1f1f1; 
-  }
-   
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: #888; 
-  }
-  
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: #555; 
-  }
-
-/* Banner */
-.banner{
-    display: flex;
-    justify-content: center;
-    margin: 8px 0px 8px 0px;
-    position: relative;
-    overflow: hidden;
+  width: 10px;
 }
 
-.img-banner{
-    width: 100%;
-    border-top-right-radius: 10px;
-    border-top-left-radius: 10px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
 }
 
-.banner-text{
-    color: white;
-    position: absolute;
-    display: flex;
-    align-self: center;
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
 }
 
-.toggle-button {
-    position: absolute;
-    top: .75rem;
-    right: 1rem;
-    display: none;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 30px;
-    height: 21px;
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
 
-.toggle-button .bar {
-    height: 3px;
-    width: 100%;
-    background-color: white;
-    border-radius: 10px;
+/* Timeline */
+.timeline-box {
+  --color: rgba(30, 30, 30);
+  --bgColor: rgba(245, 245, 245);
+  min-height: 100vh;
+  display: grid;
+  align-content: center;
+  gap: 2rem;
+  padding: 2rem;
+  background-color: #555; /*TEMP*/
 }
 
-/* Showcase */
-.showcase{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+.timeline-box ul {
+  --col-gap: 2rem;
+  --row-gap: 2rem;
+  --line-w: 0.25rem;
+  display: grid;
+  grid-template-columns: var(--line-w) 1fr;
+  grid-auto-columns: max-content;
+  column-gap: var(--col-gap);
+  list-style: none;
+  width: min(60rem, 90%);
+  margin-inline: auto;
 }
 
-.box2{
-    border: 2px solid pink;
-    margin: 20px;
-    border-radius: 10px;
+/* line */
+.timeline-box ul::before {
+  content: "";
+  grid-column: 1;
+  grid-row: 1 / span 20;
+  background: rgb(225, 225, 225);
+  border-radius: calc(var(--line-w) / 2);
 }
 
-#leftbox{
-    background-image: url("Images/comingsoon.gif");
-    background-size: cover;
+/* columns*/
+/* row gaps */
+.timeline-box ul li:not(:last-child) {
+  margin-bottom: var(--row-gap);
 }
 
-#middlebox{
-    background-image: url("Images/Background_sz.gif");
-    background-size: cover;
+/* card */
+.timeline-box ul li {
+  grid-column: 2;
+  --inlineP: 1.5rem;
+  margin-inline: var(--inlineP);
+  grid-row: span 2;
+  display: grid;
+  grid-template-rows: min-content min-content min-content;
 }
 
-#rightbox{
-    background-image: url("Images/comingsoon.gif");
-    background-size: cover;
+/* date */
+.timeline-box ul li .date {
+  --dateH: 3rem;
+  height: var(--dateH);
+  margin-inline: calc(var(--inlineP) * -1);
+
+  text-align: center;
+  background-color: var(--accent-color);
+
+  color: white;
+  font-size: 1.25rem;
+  font-weight: 700;
+
+  display: grid;
+  place-content: center;
+  position: relative;
+
+  border-radius: calc(var(--dateH) / 2) 0 0 calc(var(--dateH) / 2);
 }
 
-.games_logos{
-    max-width: 100%;
+/* date flap */
+.timeline-box ul li .date::before {
+  content: "";
+  width: var(--inlineP);
+  aspect-ratio: 1;
+  background: var(--accent-color);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.2) 100%, transparent);
+  position: absolute;
+  top: 100%;
+
+  clip-path: polygon(0 0, 100% 0, 0 100%);
+  right: 0;
 }
 
-.showmore{
-    text-align: center;
-    background-color: black;
+/* circle */
+.timeline-box ul li .date::after {
+  content: "";
+  position: absolute;
+  width: 2rem;
+  aspect-ratio: 1;
+  background: var(--bgColor);
+  border: 0.3rem solid var(--accent-color);
+  border-radius: 50%;
+  top: 50%;
+
+  transform: translate(50%, -50%);
+  right: calc(100% + var(--col-gap) + var(--line-w) / 2);
 }
 
-.showmore:hover{
-    background-color: rgb(14, 14, 14);
+/* title descr */
+.timeline-box ul li .title,
+.timeline-box ul li .descr {
+  background: var(--bgColor);
+  position: relative;
+  padding-inline: 1.5rem;
+}
+.timeline-box ul li .title {
+  overflow: hidden;
+  padding-block-start: 1.5rem;
+  padding-block-end: 1rem;
+  font-weight: 500;
+}
+.timeline-box ul li .descr {
+  padding-block-end: 1.5rem;
+  font-weight: 300;
+}
+
+/* shadows */
+.timeline-box ul li .title::before,
+.timeline-box ul li .descr::before {
+  content: "";
+  position: absolute;
+  width: 90%;
+  height: 0.5rem;
+  background: rgba(0, 0, 0, 0.5);
+  left: 50%;
+  border-radius: 50%;
+  filter: blur(4px);
+  transform: translate(-50%, 50%);
+}
+.timeline-box ul li .title::before {
+  bottom: calc(100% + 0.125rem);
+}
+
+.timeline-box ul li .descr::before {
+  z-index: -1;
+  bottom: 0.25rem;
 }
 
 /* Responsive */
-
 @media (max-width: 600px) {
-    #games {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-    }
+  #games {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
 }
 
 @media (max-width: 700px) {
-    .toggle-btn {
-        display: flex;
-    }
+  .toggle-btn {
+    display: flex;
+  }
 
-    .nav-itens {
-         display: none;
-         width: 100%;
-    }
+  .nav-itens {
+    display: none;
+    width: 100%;
+  }
 
-    .navbar {
-        flex-direction: column;
-        align-items: flex-start;
-    }
+  .navbar {
+    flex-direction: column;
+    align-items: flex-start;
+  }
 
-    .navbar-links ul {
-        width: 100%;
-        flex-direction: column;
-    }
+  .navbar-links ul {
+    width: 100%;
+    flex-direction: column;
+  }
 
-    .navbar-links li {
-        text-align: center;
-        padding: 10px;
-    }
+  .navbar-links li {
+    text-align: center;
+    padding: 10px;
+  }
 
-    .navbar-links li a {
-        padding: .5rem 1rem;
-    }
+  .navbar-links li a {
+    padding: 0.5rem 1rem;
+  }
 
-    .navbar-links.active {
-        display: flex;
-    }
+  .navbar-links.active {
+    display: flex;
+  }
 }
 
 .content {
-    overflow: hidden;
+  overflow: hidden;
 }
 
 /* Information */
-.info{
-    margin-top: 8px;
-    display: flex;
-    flex-direction: column; 
-    justify-content: space-between;
+.info {
+  margin-top: 8px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-.box3{
-    height: 100px;
-    background-color: rgba(255, 255, 255, 0.25);
-    margin-bottom: 4px;
-    border: 2px solid pink;
-    border-radius: 10px;
+.box3 {
+  height: 100px;
+  background-color: rgba(255, 255, 255, 0.25);
+  margin-bottom: 4px;
+  border: 2px solid pink;
+  border-radius: 10px;
 }
 
-.text1-box3{
-    margin: 5px 0px 0px 5px;
-    width: 50%;
-    color: white;
+.text1-box3 {
+  margin: 5px 0px 0px 5px;
+  width: 50%;
+  color: white;
 }
 /*
 #aboutme{
@@ -278,20 +313,20 @@ body{
     background-size: cover;
 }
 */
-.text2-box3{
-    margin: 5px 5px 0px 0px;
-    color: white;
-    text-align: right;
+.text2-box3 {
+  margin: 5px 5px 0px 0px;
+  color: white;
+  text-align: right;
 }
 
-.text3-box3{
-    margin: 5px 0px 0px 5px;
-    color: white;
+.text3-box3 {
+  margin: 5px 0px 0px 5px;
+  color: white;
 }
 
 /* Socials */
-.socials{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+.socials {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
